# sparring-Partner

./: LICENSE  README.md  backend_deployment_script_fr.md  deployment_script_fr.md  prompt_frontend_deployment_fr.md
.github/workflows/: deploy-backend.yaml  preview.yaml  production.yaml
backend/: .env.example  Dockerfile  cloudbuild.yaml  docker-compose.yml  pyproject.toml
backend/src/ai_companion/: settings.py
backend/src/ai_companion/core/: auth.py  helpers.py  prompts.py  schedules.py
backend/src/ai_companion/database/: mongodb.py  supabase.py
backend/src/ai_companion/fastrtc_voice_stream/: process_elevenlabs_tts.py  simple_math_agent.py  voice_assistant_agent.py
backend/src/ai_companion/models/: chat_session.py  message.py
docs/: GCP-SETUP.md  MIGRATION-001-mongodb-to-supabase.md  architecture_diagrams.mmd  memory-module-explanation.md  recording_guide.md  request_flow.mmd  slides_plan.md  video_script_fr.md
fastrtc-voice-agent/: README.md  pyproject.toml
fastrtc-voice-agent/src/: fastrtc_groq_voice_stream.py  process_groq_tts.py  simple_math_agent.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/.github/workflows/: preview.yaml  production.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/contexts/: AppContext.tsx  AuthContext.tsx  NotificationContext.tsx
frontend/src/lib/: supabase.ts  utils.ts  webrtc-client.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
mobile/SparringPartner/: app.json  package-lock.json  package.json
(+41 files in other folders)
